[gd_scene load_steps=53 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Player/adventurer-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Player/stepstone_5.ogg" type="AudioStream" id=3]
[ext_resource path="res://Music/321038__littlerobotsoundfactory__loop-little-big-adventure-07.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://Player/woosh.wav" type="AudioStream" id=6]
[ext_resource path="res://Music/320958__littlerobotsoundfactory__loop-casual-space-exploration-11.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Healthbar/over.png" type="Texture" id=8]
[ext_resource path="res://Assets/Healthbar/under.png" type="Texture" id=9]
[ext_resource path="res://Assets/Healthbar/progress.png" type="Texture" id=10]
[ext_resource path="res://Player/Player-Normal.png" type="Texture" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.39035
height = 14.9252

[sub_resource type="Animation" id=2]
resource_name = "Attack 1"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.05, 0.09, 0.14, 0.19, 0.23, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47, 48, 49 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.03, 0.05, 0.09, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "playWooshSound"
}, {
"args": [  ],
"method": "enableHitbox"
}, {
"args": [  ],
"method": "disableHitbox"
}, {
"args": [  ],
"method": "endAttack"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack 2"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.12, 0.27 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51, 52 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03, 0.12, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "playWooshSound"
}, {
"args": [  ],
"method": "enableHitbox"
}, {
"args": [  ],
"method": "disableHitbox"
}, {
"args": [  ],
"method": "endAttack"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attack 3"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.08, 0.18, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 55, 56, 57, 58 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02, 0.03, 0.08, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "playWooshSound"
}, {
"args": [  ],
"method": "enableHitbox"
}, {
"args": [  ],
"method": "disableHitbox"
}, {
"args": [  ],
"method": "endAttack"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=6]
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 22, 23, 22, 23, 22 ]
}

[sub_resource type="Animation" id=7]
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.35, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 16, 17 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.19, 0.29, 0.39, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Attack 1"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Attack 2"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Attack 3"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Double Jump"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=19]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=38]
"states/Attack 1/node" = SubResource( 11 )
"states/Attack 1/position" = Vector2( 361, 315 )
"states/Attack 2/node" = SubResource( 12 )
"states/Attack 2/position" = Vector2( 618, 161.896 )
"states/Attack 3/node" = SubResource( 13 )
"states/Attack 3/position" = Vector2( 583, 321.896 )
"states/Double Jump/node" = SubResource( 14 )
"states/Double Jump/position" = Vector2( 1003, 224.896 )
states/Fall/node = SubResource( 15 )
states/Fall/position = Vector2( 854, 434 )
states/Idle/node = SubResource( 16 )
states/Idle/position = Vector2( 224, 66 )
states/Jump/node = SubResource( 17 )
states/Jump/position = Vector2( 777, 66 )
states/Run/node = SubResource( 18 )
states/Run/position = Vector2( 201, 412 )
transitions = [ "Jump", "Fall", SubResource( 19 ), "Fall", "Idle", SubResource( 20 ), "Fall", "Run", SubResource( 21 ), "Idle", "Run", SubResource( 22 ), "Run", "Idle", SubResource( 23 ), "Run", "Fall", SubResource( 24 ), "Jump", "Idle", SubResource( 25 ), "Idle", "Attack 1", SubResource( 26 ), "Attack 1", "Idle", SubResource( 27 ), "Idle", "Jump", SubResource( 28 ), "Jump", "Double Jump", SubResource( 29 ), "Double Jump", "Fall", SubResource( 30 ), "Fall", "Double Jump", SubResource( 31 ), "Attack 1", "Attack 2", SubResource( 32 ), "Attack 2", "Idle", SubResource( 33 ), "Idle", "Attack 2", SubResource( 34 ), "Attack 2", "Attack 3", SubResource( 35 ), "Attack 3", "Idle", SubResource( 36 ), "Idle", "Attack 3", SubResource( 37 ) ]
start_node = "Idle"
graph_offset = Vector2( -88, -13.104 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=39]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 13.5731, 10 )

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 13.8884, 10 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 386.688, 55.5619 )
z_index = 3
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
smoothing_enabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
normal_map = ExtResource( 11 )
vframes = 11
hframes = 7
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.140625, 2.77575 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Attack 1" = SubResource( 2 )
"anims/Attack 2" = SubResource( 3 )
"anims/Attack 3" = SubResource( 4 )
"anims/Double Jump" = SubResource( 5 )
anims/Fall = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Jump = SubResource( 8 )
anims/JumpStart = SubResource( 9 )
anims/Run = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 38 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 39 )

[node name="Footstep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -8.65
pitch_scale = 0.85
attenuation = 81.5717
bus = "SFX"

[node name="Timers" type="Node2D" parent="."]

[node name="JumpTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="KnockBackTimer" type="Timer" parent="Timers"]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 5.825
autoplay = true
bus = "Music"

[node name="Jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -2.02
pitch_scale = 1.05
bus = "SFX"

[node name="Woosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 11.883
pitch_scale = 1.42
attenuation = 7.46426
bus = "SFX"

[node name="LeftHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftHitBox"]
position = Vector2( -13.7697, 3.04824 )
shape = SubResource( 40 )
disabled = true

[node name="RightHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightHitBox"]
position = Vector2( 14.2953, 3.04824 )
shape = SubResource( 41 )
disabled = true

[node name="BattleMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="BattleMusicTimer" type="Timer" parent="BattleMusic"]
wait_time = 5.0
one_shot = true

[node name="HealthBar" type="Control" parent="."]
margin_left = -8.13782
margin_top = -21.3268
margin_right = 31.8622
margin_bottom = 18.6732
rect_scale = Vector2( 0.407748, 0.407748 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="HealthBar"]
margin_right = 40.0
margin_bottom = 40.0
max_value = 5.0
value = 5.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 8 )
texture_progress = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="LeftHitBox" to="." method="_on_LeftHitBox_area_entered"]
[connection signal="area_entered" from="RightHitBox" to="." method="_on_RightHitBox_area_entered"]
[connection signal="timeout" from="BattleMusic/BattleMusicTimer" to="." method="_on_BattleMusicTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
